# CrazyShit

./: .gitignore  LICENSE  README.md  __init__.py  client.py  crazyshit.handlers.html  crazyshit.methods.html  filters.py  genindex.html  index.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml  ruff.yml
_modules/crazyshit/: filters.html
_modules/crazyshit/handlers/: on_message.html
_modules/crazyshit/methods/: get_last_message.html  send_message.html
_sources/: crazyshit.methods.rst.txt  crazyshit.rst.txt
crazyshit/: __init__.py  client.py  filters.py
crazyshit/handlers/: __init__.py  on_message.py
crazyshit/methods/: __init__.py  esc.py  get_last_message.py  send_message.py
crazyshit/types/: update.py
docs/: conf.py
docs/_build/doctrees/: crazyshit.doctree  crazyshit.handlers.doctree  crazyshit.methods.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  crazyshit.handlers.html  crazyshit.html  crazyshit.methods.html  modules.html  objects.inv  py-modindex.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/crazyshit/: client.html  filters.html  handlers.html  methods.html
docs/_build/html/_modules/crazyshit/handlers/: on_message.html
docs/_build/html/_modules/crazyshit/methods/: esc.html  get_last_message.html  (+1 more)
docs/_build/html/_sources/: crazyshit.handlers.rst.txt  index.rst.txt  modules.rst.txt
handlers/: __init__.py  on_message.py
methods/: __init__.py  esc.py  get_last_message.py  send_message.py
types/: update.py
